Fix sidebar items alignement issues

--- a/src/scss/core/layout/_sidebar.scss
+++ b/src/scss/core/layout/_sidebar.scss
@@ -17,13 +17,11 @@
     position: relative;
     background-color: $sidebar-bg;
     color: $sidebar-color;
-
     @media (min-width: $screen-size-md) {
         display: table-cell;
         vertical-align: top;
         max-width: $sidebar-base-width;
     }
-
     &-default {
         z-index: 99;
         .navigation-header {
@@ -32,22 +30,18 @@
             }
         }
     }
-    
     &-collapsed {
-
         &.sidebar {
             min-width: $sidebar-mini-width !important;
         }
-
         .sidebar-content {
             >.navigation {
                 li {
-                    > .navigation-header {
-                        > span {
+                    >.navigation-header {
+                        >span {
                             display: none;
                         }
-
-                        > i {
+                        >i {
                             display: block;
                             left: 19px;
                             position: absolute;
@@ -56,91 +50,78 @@
                             }
                         }
                     }
-
-                    > a {
+                    >a {
                         text-align: center;
                         padding-left: 0;
                         padding-right: 0;
                         display: block;
                     }
-
-                    > i {
+                    >i {
                         margin: 2px 0;
                         display: block;
                         float: none;
                     }
-
-                    > span {
+                    >span {
                         display: none;
                     }
-
                     &.has-ul:after {
                         display: none;
                     }
                 }
             }
         }
-
         .hidden-ul {
             display: none;
         }
-        .side
-        bar-content {
+        .side bar-content {
             position: relative;
         }
     }
-
     .navigation {
         margin: 0;
         padding: ($line-height-computed / 2) 0;
         list-style: none;
         position: relative;
-
         .hidden-ul {
             display: none;
         }
-
-        > li {
+        >li {
             position: relative;
-
             +li {
                 margin-top: 1px;
             }
-            
             &.active {
-                background-color: $dark-hover;
-                //border-left: 1px solid #fff;
+                background-color: $dark-hover; //border-left: 1px solid #fff;
             }
-
-            > a {
+            >a {
                 display: block;
                 color: $sidebar-color;
                 font-size: ($icon-font-size);
                 text-transform: uppercase;
-
                 &:focus,
                 &:hover {
                     background-color: $dark-hover;
                     color: $sidebar-hover-color;
                     text-decoration: none;
                 }
-
-                > i {
+                >i {
                     float: left;
-                    top: 0;
+                    top: 11px;
+                    position: absolute;
                     margin-top: 2px;
                     margin-right: $content-padding-base;
                     font-size: $icon-font-size + 2;
-
                     &.pull-right {
                         margin-right: 0;
                         margin-left: $content-padding-base;
                     }
                 }
+                >span {
+                    margin-left: 27px;
+                }
             }
-
             &.disabled {
-                > a {
+                >a {
                     &,
                     &:hover,
                     &:focus {
@@ -151,11 +132,9 @@
                     }
                 }
             }
-
-            > .has-ul {
+            >.has-ul {
                 position: relative;
                 padding-right: ($content-padding-large + $icon-font-size); // Arrow icons
-
                 &:after {
                     content: "\f107";
                     display: inline-block;
@@ -174,19 +153,15 @@
                     @include transition(-webkit-transform 0.2s ease-in-out);
                 }
             }
-
             &.active>.has-ul:after {
                 @include rotate(90deg);
             }
         }
-
-        > li {
-
+        >li {
             a {
                 padding: $sidebar-link-padding-vertical $sidebar-link-padding-horizontal;
                 min-height: ($line-height-computed + ($sidebar-link-padding-vertical * 2));
             }
-
             ul {
                 list-style: none;
                 margin: 0;
@@ -194,42 +169,34 @@
                 background-color: fade(#000, 15%);
                 width: $sidebar-base-width;
                 @include box-shadow(0 1px 0 fade(#fff, 5%));
-
                 li {
                     background-color: #232323;
                     position: relative;
-
                     &:hover,
                     &:active {
                         background-color: lighten($dark-hover, 40%);
                     }
-
-                    > a {
-                        padding: 10px $content-padding-large 10px 48px;
-                        //padding-left: ($content-padding-base + $icon-font-size) * 1.4;
+                    >a {
+                        padding: 10px $content-padding-large 10px 48px; //padding-left: ($content-padding-base + $icon-font-size) * 1.4;
                         min-height: ($line-height-computed + 20);
                         font-size: $font-size-sm * 1.2;
                         color: $sidebar-color;
                         display: block;
-
                         &:hover,
                         &:active {
                             text-decoration: none;
                             color: #fff;
                         }
                     }
-
                     &.active {
                         border-left: none;
                     }
                 }
-
                 .navigation-header {
                     padding-left: ($content-padding-large + $content-padding-base + $icon-font-size);
                 }
             }
         }
-
         .navigation-header {
             padding: $content-padding-small $content-padding-large;
             border-bottom: 0;
@@ -239,8 +206,7 @@
             margin-top: 10px;
             opacity: 0.7;
             font-weight: 300;
-
-            > span {
+            >span {
                 display: block;
                 margin-top: ($font-size-base - $font-size-xs);
                 width: $sidebar-base-width;
